# container_sysinfo

./: docker-compose.yaml  docker-status.txt  findings.txt
server_go/: Dockerfile  go.mod  main.go
server_rs/: Cargo.toml  Dockerfile
server_rs/src/: main.rs
