[package]
name = "server_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", default-features = false, features = ["macros"] }
nix = { version = "0.29.0", features = ["net"] }
serde = { version = "1.0.210", features = ["derive", "serde_derive"] }
serde_json = "1.0.128"
